# mangoland-api

./: .env.example  README.md  pyproject.toml
app/: env_validator.py  logger.py  main.py  server.py
app/core/: config.py  error.py
app/router/: __init__.py  game.py
